<?xml version="1.0"?>
<package format="2">
  <name>pandar_description</name>
  <version>0.1.0</version>
  <description>The pandar_description package</description>

  <maintainer email="shinnosuke.hirakawa@tier4.jp">Shinnosuke Hirakawa</maintainer>
  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
